<resources>
    <string name="app_name">ChatPrototype</string>
    <string name="log_in">Log in</string>
    <string name="enter_mailid">Enter MailID</string>
    <string name="enter_password">Enter Password</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click Here to Login</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
</resources>
