<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login"
   android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="220dp">

<EditText
    android:id="@+id/email"
    android:hint="@string/enter_mailid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:background="@drawable/ed_2"
    android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/pass"
        android:layout_margin="10dp"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:background="@drawable/ed_2"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80A0B9"
        android:layout_margin="20dp"
        android:text="@string/log_in"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/JMPreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp"
        android:layout_margin="10dp"
        android:text="@string/click_here_to_register"/>
</LinearLayout>