<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="220dp">

<EditText
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:layout_margin="10dp"
    android:hint="Enter Name"
    android:background="@drawable/ed_2"/>
    <EditText
        android:id="@+id/email_reg"
        android:hint="@string/enter_mailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="@drawable/ed_2"/>

    <EditText
        android:id="@+id/pass_reg"
        android:layout_margin="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ed_2"/>
    <Button
        android:id="@+id/button_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80A0B9"
        android:layout_margin="20dp"
        android:text="@string/register"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/JMPlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:paddingLeft="80dp"
        android:layout_margin="10dp"
        android:text="@string/click_here_to_login"
        android:paddingStart="80dp" />
</LinearLayout>